crd implementation done for deployment and service

--- a/config/crd/bases/httpserver.ext-k8s.faisal097.com_empmanagers.yaml
+++ b/config/crd/bases/httpserver.ext-k8s.faisal097.com_empmanagers.yaml
@@ -48,6 +48,7 @@ spec:
                 type: string
               replicas:
                 description: Replicas needed for the server instances
+                format: int32
                 type: integer
               spec:
                 description: Spec contains the namespace/deployement/service as yaml
