--- a/config/samples/httpserver_v1alpha1_empmanager.yaml
+++ b/config/samples/httpserver_v1alpha1_empmanager.yaml
@@ -7,8 +7,8 @@ metadata:
   name: empmanager01
 spec:
   name: empmanager01
-  image: ""
-  replicas: 1
+  image: faisal0097/experiments:1.0.1
+  replicas: 2
   spec: |
     kind: Namespace
     apiVersion: v1
